--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "style-loader": "^1.3.0",
     "webpack": "^4.44.2",
     "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^3.11.0"
+    "webpack-dev-server": "^3.11.0",
+    "node-forge": ">=0.10.0"
   },
   "dependencies": {
     "babylonjs": "^4.2.0",
