--- a/package.json
+++ b/package.json
@@ -14,17 +14,18 @@
   "devDependencies": {
     "@babel/core": "^7.12.10",
     "@babel/preset-env": "^7.12.11",
+    "ammo.js": "github:kripken/ammo.js",
     "babel-loader": "^8.2.2",
     "cannon": "^0.6.2",
     "css-loader": "^3.6.0",
     "file-loader": "^5.1.0",
     "html-webpack-plugin": "^3.2.0",
+    "node-forge": ">=0.10.0",
     "stats": "^1.0.0",
     "style-loader": "^1.3.0",
     "webpack": "^4.44.2",
     "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^3.11.0",
-    "node-forge": ">=0.10.0"
+    "webpack-dev-server": "^3.11.0"
   },
   "dependencies": {
     "babylonjs": "^4.2.0",
